ready for proof-reading

--- a/Inhalt/04_Inhalt/appendix.tex
+++ b/Inhalt/04_Inhalt/appendix.tex
@@ -1,22 +1,30 @@
 \chapter{Appendix}
 \section{Inventory of Resources}
+
+The inventory of resources is a list of all available utilities.
 \begin{table}[!ht]
     \caption{Inventory of Resources}
-    \begin{tabular}{lll}
+    \begin{tabular}{l|ll}
+    \toprule	
     \textbf{Type of resources} & \textbf{Kind of resources} & \textbf{Quantification}                                                    \\
+    \midrule
     Personnel                  & business experts           & 1 person                                                                   \\
                                & data experts               & 1 person                                                                   \\
                                & technical support          & 1 person                                                                   \\
                                & data mining experts        & 1 person                                                                   \\
+    \midrule
     Data                       & fixed extracts             & -                                                                \\
                                & live data                  & -                                                                          \\
                                & warehoused data            & -                                                                          \\
                                & operational data           & 1 dataset                                                                         \\
+    \midrule
     Computing resources        & hardware platforms         & \begin{tabular}[c]{@{}l@{}}1 machine \\ access to SAP AI Core\end{tabular} \\
+    \midrule
     Software                   & data mining tools          & anaconda, jupyter                                                          \\
                                & other relevant software    & Excel, Visual Studio Code, Git                                                                     
     \end{tabular}
     \label{tabelle:inventory}
+    
     
     *) An asterisk indicates theoretical availability of more resources, if needed.
     \end{table}
@@ -30,180 +38,180 @@
 	\label{invoice-header}
 	\begin{itemize}
 		\setlength\multicolsep{0pt}
-		\item[] accountNumber.key
-		\item[] accountNumber.value
-		\item[] barCode.value
-		\item[] buyerAddress.cityTownVillage.value
-		\item[] buyerAddress.country.value
-		\item[] buyerAddress.district.value
-		\item[] buyerAddress.extraName.value
-		\item[] buyerAddress.full.key
-		\item[] buyerAddress.full.value
-		\item[] buyerAddress.houseNumber.value
-		\item[] buyerAddress.stateProvince.value
-		\item[] buyerAddress.street.value
-		\item[] buyerAddress.zip.value
-		\item[] buyerName.key
-		\item[] buyerName.value
-		\item[] comments.key
-		\item[] comments.value
-		\item[] country.value
-		\item[] currency.key
-		\item[] currency.value
-		\item[] deliveryDate.key
-		\item[] deliveryDate.value
-		\item[] deliveryNoteNo.key
-		\item[] deliveryNoteNo.value
-		\item[] discount.key
-		\item[] discount.value
-		\item[] dueDate.key
-		\item[] dueDate.value
-		\item[] employeeName.key
-		\item[] employeeName.value
-		\item[] exchRate.key
-		\item[] exchRate.value
-		\item[] exchRateSrcCurr.key
-		\item[] exchRateSrcCurr.value
-		\item[] exchRateTarCurr.key
-		\item[] exchRateTarCurr.value
-		\item[] filename
-		\item[] index
-		\item[] invoiceAmount.key
-		\item[] invoiceAmount.value
-		\item[] invoiceDate.key
-		\item[] invoiceDate.value
-		\item[] invoiceNo.key
-		\item[] invoiceNo.value
-		\item[] invoiceType.value
-		\item[] language
-		\item[] paymentTerms.key
-		\item[] paymentTerms.value
-		\item[] pii.address.key
-		\item[] pii.address.value
-		\item[] pii.email.key
-		\item[] pii.email.value
-		\item[] pii.name.key
-		\item[] pii.name.value
-		\item[] pii.other.key
-		\item[] pii.other.value
-		\item[] pii.phone.key
-		\item[] pii.phone.value
-		\item[] purchaseOrderNo.key
-		\item[] purchaseOrderNo.value
-		\item[] shipToAddress.cityTownVillage.value
-		\item[] shipToAddress.country.value
-		\item[] shipToAddress.district.value
-		\item[] shipToAddress.extraName.value
-		\item[] shipToAddress.full.key
-		\item[] shipToAddress.full.value
-		\item[] shipToAddress.houseNumber.value
-		\item[] shipToAddress.stateProvince.value
-		\item[] shipToAddress.street.value
-		\item[] shipToAddress.zip.value
-		\item[] shippingAmount.key
-		\item[] shippingAmount.value
-		\item[] subtotalAmount.key
-		\item[] subtotalAmount.value
-		\item[] tableHeader.batchNumber.value
-		\item[] tableHeader.description.value
-		\item[] tableHeader.discount.value
-		\item[] tableHeader.materialNumber.value
-		\item[] tableHeader.purchaseOrderNumber.value
-		\item[] tableHeader.quantity.value
-		\item[] tableHeader.serialNumber.value
-		\item[] tableHeader.tableHeaderBox
-		\item[] tableHeader.tax10Amount.value
-		\item[] tableHeader.tax10Rate.value
-		\item[] tableHeader.tax1Amount.value
-		\item[] tableHeader.tax1Rate.value
-		\item[] tableHeader.tax2Amount.value
-		\item[] tableHeader.tax2Rate.value
-		\item[] tableHeader.tax3Amount.value
-		\item[] tableHeader.tax3Rate.value
-		\item[] tableHeader.tax4Amount.value
-		\item[] tableHeader.tax4Rate.value
-		\item[] tableHeader.tax5Amount.value
-		\item[] tableHeader.tax5Rate.value
-		\item[] tableHeader.tax6Amount.value
-		\item[] tableHeader.tax6Rate.value
-		\item[] tableHeader.tax7Rate.value
-		\item[] tableHeader.totalAmount.value
-		\item[] tableHeader.unitOfMeasure.value
-		\item[] tableHeader.unitPrice.value
-		\item[] tax10Amount.key
-		\item[] tax10Amount.value
-		\item[] tax10Description.key
-		\item[] tax10Description.value
-		\item[] tax10Rate.key
-		\item[] tax10Rate.value
-		\item[] tax1Amount.key
-		\item[] tax1Amount.value
-		\item[] tax1Description.key
-		\item[] tax1Description.value
-		\item[] tax1Rate.key
-		\item[] tax1Rate.value
-		\item[] tax2Amount.key
-		\item[] tax2Amount.value
-		\item[] tax2Description.key
-		\item[] tax2Description.value
-		\item[] tax2Rate.key
-		\item[] tax2Rate.value
-		\item[] tax3Amount.key
-		\item[] tax3Amount.value
-		\item[] tax3Description.key
-		\item[] tax3Description.value
-		\item[] tax3Rate.key
-		\item[] tax3Rate.value
-		\item[] tax4Amount.key
-		\item[] tax4Amount.value
-		\item[] tax4Description.key
-		\item[] tax4Description.value
-		\item[] tax4Rate.key
-		\item[] tax4Rate.value
-		\item[] tax5Amount.key
-		\item[] tax5Amount.value
-		\item[] tax5Description.value
-		\item[] tax5Rate.key
-		\item[] tax5Rate.value
-		\item[] tax6Amount.key
-		\item[] tax6Amount.value
-		\item[] tax6Description.key
-		\item[] tax6Description.value
-		\item[] tax6Rate.key
-		\item[] tax6Rate.value
-		\item[] tax7Amount.key
-		\item[] tax7Amount.value
-		\item[] tax7Description.value
-		\item[] tax7Rate.key
-		\item[] tax7Rate.value
-		\item[] tax8Amount.key
-		\item[] tax8Amount.value
-		\item[] tax8Description.value
-		\item[] tax8Rate.key
-		\item[] tax8Rate.value
-		\item[] tax9Amount.key
-		\item[] tax9Amount.value
-		\item[] tax9Description.value
-		\item[] tax9Rate.key
-		\item[] tax9Rate.value
-		\item[] totalAmount.key
-		\item[] totalAmount.value
-		\item[] vendorAddress.cityTownVillage.value
-		\item[] vendorAddress.country.value
-		\item[] vendorAddress.district.value
-		\item[] vendorAddress.extraName.value
-		\item[] vendorAddress.full.key
-		\item[] vendorAddress.full.value
-		\item[] vendorAddress.houseNumber.value
-		\item[] vendorAddress.stateProvince.value
-		\item[] vendorAddress.street.value
-		\item[] vendorAddress.zip.value
-		\item[] vendorBankAccountNo.key
-		\item[] vendorBankAccountNo.value
-		\item[] vendorName.key
-		\item[] vendorName.value
-		\item[] vendorTaxID.key
-		\item[] vendorTaxID.value
+\item[] accountNumber.key
+\item[] accountNumber.value
+\item[] barCode.value
+\item[] buyerAddress.cityTownVillage.value
+\item[] buyerAddress.country.value
+\item[] buyerAddress.district.value
+\item[] buyerAddress.extraName.value
+\item[] buyerAddress.full.key
+\item[] buyerAddress.full.value
+\item[] buyerAddress.houseNumber.value
+\item[] buyerAddress.stateProvince.value
+\item[] buyerAddress.street.value
+\item[] buyerAddress.zip.value
+\item[] buyerName.key
+\item[] buyerName.value
+\item[] comments.key
+\item[] comments.value
+\item[] country.value
+\item[] currency.key
+\item[] currency.value
+\item[] deliveryDate.key
+\item[] deliveryDate.value
+\item[] deliveryNoteNo.key
+\item[] deliveryNoteNo.value
+\item[] discount.key
+\item[] discount.value
+\item[] dueDate.key
+\item[] dueDate.value
+\item[] employeeName.key
+\item[] employeeName.value
+\item[] exchRate.key
+\item[] exchRate.value
+\item[] exchRateSrcCurr.key
+\item[] exchRateSrcCurr.value
+\item[] exchRateTarCurr.key
+\item[] exchRateTarCurr.value
+\item[] filename
+\item[] index
+\item[] invoiceAmount.key
+\item[] invoiceAmount.value
+\item[] invoiceDate.key
+\item[] invoiceDate.value
+\item[] invoiceNo.key
+\item[] invoiceNo.value
+\item[] invoiceType.value
+\item[] language
+\item[] paymentTerms.key
+\item[] paymentTerms.value
+\item[] pii.address.key
+\item[] pii.address.value
+\item[] pii.email.key
+\item[] pii.email.value
+\item[] pii.name.key
+\item[] pii.name.value
+\item[] pii.other.key
+\item[] pii.other.value
+\item[] pii.phone.key
+\item[] pii.phone.value
+\item[] purchaseOrderNo.key
+\item[] purchaseOrderNo.value
+\item[] shipToAddress.cityTownVillage.value
+\item[] shipToAddress.country.value
+\item[] shipToAddress.district.value
+\item[] shipToAddress.extraName.value
+\item[] shipToAddress.full.key
+\item[] shipToAddress.full.value
+\item[] shipToAddress.houseNumber.value
+\item[] shipToAddress.stateProvince.value
+\item[] shipToAddress.street.value
+\item[] shipToAddress.zip.value
+\item[] shippingAmount.key
+\item[] shippingAmount.value
+\item[] subtotalAmount.key
+\item[] subtotalAmount.value
+\item[] tableHeader.batchNumber.value
+\item[] tableHeader.description.value
+\item[] tableHeader.discount.value
+\item[] tableHeader.materialNumber.value
+\item[] tableHeader.purchaseOrderNumber.value
+\item[] tableHeader.quantity.value
+\item[] tableHeader.serialNumber.value
+\item[] tableHeader.tableHeaderBox
+\item[] tableHeader.tax10Amount.value
+\item[] tableHeader.tax10Rate.value
+\item[] tableHeader.tax1Amount.value
+\item[] tableHeader.tax1Rate.value
+\item[] tableHeader.tax2Amount.value
+\item[] tableHeader.tax2Rate.value
+\item[] tableHeader.tax3Amount.value
+\item[] tableHeader.tax3Rate.value
+\item[] tableHeader.tax4Amount.value
+\item[] tableHeader.tax4Rate.value
+\item[] tableHeader.tax5Amount.value
+\item[] tableHeader.tax5Rate.value
+\item[] tableHeader.tax6Amount.value
+\item[] tableHeader.tax6Rate.value
+\item[] tableHeader.tax7Rate.value
+\item[] tableHeader.totalAmount.value
+\item[] tableHeader.unitOfMeasure.value
+\item[] tableHeader.unitPrice.value
+\item[] tax10Amount.key
+\item[] tax10Amount.value
+\item[] tax10Description.key
+\item[] tax10Description.value
+\item[] tax10Rate.key
+\item[] tax10Rate.value
+\item[] tax1Amount.key
+\item[] tax1Amount.value
+\item[] tax1Description.key
+\item[] tax1Description.value
+\item[] tax1Rate.key
+\item[] tax1Rate.value
+\item[] tax2Amount.key
+\item[] tax2Amount.value
+\item[] tax2Description.key
+\item[] tax2Description.value
+\item[] tax2Rate.key
+\item[] tax2Rate.value
+\item[] tax3Amount.key
+\item[] tax3Amount.value
+\item[] tax3Description.key
+\item[] tax3Description.value
+\item[] tax3Rate.key
+\item[] tax3Rate.value
+\item[] tax4Amount.key
+\item[] tax4Amount.value
+\item[] tax4Description.key
+\item[] tax4Description.value
+\item[] tax4Rate.key
+\item[] tax4Rate.value
+\item[] tax5Amount.key
+\item[] tax5Amount.value
+\item[] tax5Description.value
+\item[] tax5Rate.key
+\item[] tax5Rate.value
+\item[] tax6Amount.key
+\item[] tax6Amount.value
+\item[] tax6Description.key
+\item[] tax6Description.value
+\item[] tax6Rate.key
+\item[] tax6Rate.value
+\item[] tax7Amount.key
+\item[] tax7Amount.value
+\item[] tax7Description.value
+\item[] tax7Rate.key
+\item[] tax7Rate.value
+\item[] tax8Amount.key
+\item[] tax8Amount.value
+\item[] tax8Description.value
+\item[] tax8Rate.key
+\item[] tax8Rate.value
+\item[] tax9Amount.key
+\item[] tax9Amount.value
+\item[] tax9Description.value
+\item[] tax9Rate.key
+\item[] tax9Rate.value
+\item[] totalAmount.key
+\item[] totalAmount.value
+\item[] vendorAddress.cityTownVillage.value
+\item[] vendorAddress.country.value
+\item[] vendorAddress.district.value
+\item[] vendorAddress.extraName.value
+\item[] vendorAddress.full.key
+\item[] vendorAddress.full.value
+\item[] vendorAddress.houseNumber.value
+\item[] vendorAddress.stateProvince.value
+\item[] vendorAddress.street.value
+\item[] vendorAddress.zip.value
+\item[] vendorBankAccountNo.key
+\item[] vendorBankAccountNo.value
+\item[] vendorName.key
+\item[] vendorName.value
+\item[] vendorTaxID.key
+\item[] vendorTaxID.value
 \end{itemize}
 \end{multicols}
 \cleardoublepage
@@ -250,14 +258,17 @@
 \end{multicols}
 \newpage
 \section{Benchmarking DataFrames and Dictionaries}
-
 \label{benchmarkDF}
+
+The following benchmark of different indexing method shows the performance disparity between \lstinline|dictionaries| (maps) and \lstinline|DataFrame|s. A \lstinline|DataFrame| is a tabular data structure in python. While the \lstinline|DataFrame| takes a few microseconds, accessing the same data in a \lstinline|dictionary| is up to 300 times faster.
 \begin{figure}[h!]
 	%\left
 	\includegraphics[height=15cm]{Bilder/appendix/dfvsdict.png}
 	\label{fig:dbscan-plot}
 \end{figure}
-\begin{lstlisting}[caption={Benchmark of Indexing with Python Data Structures}]
+ [caption={Benchmark of Indexing with Python Data Structures}]
+\begin{lstlisting}
+
 	   
 \end{lstlisting}
 The \lstinline|.loc| indexing is  130.24 times slower than dictionary access.\\
@@ -265,7 +276,10 @@ The \lstinline|.at|  indexing is  62.06 times slower than dictionary access.\\
 The \lstinline|.iloc|  indexing is  310.28 times slower than dictionary access.\\
 The \lstinline|.iat|  indexing is  213.44 times slower than dictionary access.
 
+\newpage
 \section{File Processing Script}
+The following script processes one \ac{JSON} invoice file. This particular script only extracts the header data from the invoice and returns it as a \lstinline|DataFrame|.
+
 \lstinputlisting[
 label=code:InvoiceReader,    % Label; genutzt für Referenzen auf dieses Code-Beispiel
 caption=Python Script for extracting JSON Data into a DataFrame,
@@ -275,16 +289,23 @@ firstline=0,                % Zeilennummer im Dokument welche als erste angezeig
 lastline=23                 % Letzte Zeile welche ins LaTeX Dokument übernommen wird
 ]{Quellcode/reader}
 
+\newpage
 
 \section{\ac{TF-IDF}}
 \label{appendix:tfidf}
-\begin{figure}[]
+
+The following \lstinline|DataFrame| shows the \ac{TF-IDF} representation of the dataset. There being only zeroes visible does not mean, it is empty. This just again shows how sparse the \ac{TF-IDF} matrix is.
+
+
+\begin{figure}[!h]
 	\centering
 	\includegraphics[height=6cm]{Bilder/preprocessing/tfidf.png}
 	\label{fig:tfidf}
 	\caption{Features extracted with TF-IDF}
 \end{figure}
-\begin{figure}[]
+
+When selecting ten random documents, and summing their weights, the values for each token show up. For the ten random documents, the word 'beer' is of the highest importance according to \ac{TF-IDF}.
+\begin{figure}[!h]
 	\centering
 	\includegraphics[height=6cm]{Bilder/preprocessing/tfidf_sparse.png}
 	\label{fig:tfidf_sparse}
@@ -299,18 +320,18 @@ lastline=23                 % Letzte Zeile welche ins LaTeX Dokument übernommen
 	\label{fig:transformer}
 	\centering
 	\includegraphics[height=18cm]{Bilder/preprocessing/BERT/transformer_architecture.png}
-	\caption{Observations for training with skipgram architecture}
+	\caption{The Transfomer Architecture \cite{transformersAttention}}
 \end{figure}
 
 
 
 
 \newpage
-\section{Outliers}
-
+\section{Outliers detected with \acs{DBSCAN}}
+This projection shows which data points were classified as outliers (marked red) by \ac{DBSCAN}. At first, it might seem confusing that the outliers are centered in the projection. But, this dataset has undergone tremendous dimensionality reduction - from 512 dimensions to just two. This process can simply not capture all distances in all dimensions, especially for this magnitude of compression. Instead, the \ac{DBSCAN} algorithm can be trusted to inspect all dimensions for outliers.
 \begin{figure}[h!]
 	\centering
-	\includegraphics[height=18cm]{Bilder/models/outliers.pdf}
+	\includegraphics[height=15cm]{Bilder/models/outliers.pdf}
 	\caption{Projection of the Data with Outliers marked Red }
 	\label{fig:dbscan-outliers}
 \end{figure}
