--- a/Inhalt/04_Inhalt/content_business_understanding.tex
+++ b/Inhalt/04_Inhalt/content_business_understanding.tex
@@ -52,21 +52,20 @@ With not reaching the original goal of a research project, the work does not aut
 
 \subsection{Terminology}
 To summarize both relevant data mining and business terminology, a glossary was compiled.
-\textcolor{red}{This is not yet completed, as the glossary of terms will be expanded while writing the thesis.}
+
 	\paragraph{Clustering Algorithm} A clustering algorithm is a sequence of instructions, which arranges a set of instances into groups, which contain items of high similarity to each other.
-	\paragraph{Document} A document is a unit of data most typically containing natural language text.
-	\paragraph{Hyperparameter}
+	\paragraph{Document} In the context of \ac{NLP}, a document is a unit of data containing natural language text. In the context of this thesis, 'document' refers to the product description of one line item in an invoice.
+	\paragraph{Hyperparameter} The hyperparameters of a \ac{ML} model is a configured trait of the model. Usually, it is specified by the practitioner and altered over time in a process called hyperparameter tuning \cite{hyperparameter}.
 	\paragraph{Hyperscaler} A hyperscaler is a company offering architecture to adapt to changing workloads in cloud computing, networking and internet services.
-	\paragraph{\acf{NLP}} \ac{NLP} is often attributed to computer science, but after closer examination, \ac{NLP} is a discipline comprised of linguistics, computer science, artificial intelligence an mathematics \cite{chowdhury2003}.
-	\paragraph{Overfitting}
-	\paragraph{Pickle}
-	\paragraph{Process}
+	\paragraph{\acf{NLP}} \ac{NLP} is a discipline comprised of linguistics, computer science, artificial intelligence an mathematics \cite{chowdhury2003}.
+	\paragraph{Overfitting} Overfitting is a problem occurring in machine learning, in which the model adapts too closely to the data and is not able to make meaningful inferences on new data.
+	\paragraph{Pickle} The process of pickling is a form of serialization in python.
 	\paragraph{Script} A script is  a small piece of code contained in a single file, most commonly written in a dynamic high-level programming language.
 	\paragraph{SAP AI Foundation} The SAP AI Foundation is a term describing SAP's offerings of the AI Launchpad and AI Core.
 	\paragraph{SAP AI Launchpad} The SAP AI Launchpad is a tool for the operation of AI content inside an SAP system.
 	\paragraph{SAP AI Core} SAP AI Core allows for training and serving AI scenarios \cite{schmitzLeonardo}.
-	\paragraph{Token}
-	\paragraph{Underfitting}
+	\paragraph{Token} A token is the "atomic unit" \cite{MLGlossary} of a natural language model. Tokens can be whole words, characters or parts of a word.
+	\paragraph{Underfitting} The counterpart to overfitting is underfitting. In this problem, the \ac{ML} model is not complex enough to fully capture the complexity of the data \cite{MLGlossary}.
 
 
 \section{Data Mining Goals}
