--- a/Inhalt/04_Inhalt/content_dataset_selection.tex
+++ b/Inhalt/04_Inhalt/content_dataset_selection.tex
@@ -65,7 +65,7 @@
 	The complementary project type is the data-first project. This type is characterized by a more exploratory approach, and the goal to find problems and patterns. Here, the dataset is at the core of the project and the fixed aspect of the project. In turn, this means swapping the dataset is the start of a new project. When turning to the metaphor of mining for minerals, this type of project would be the exploration of different test pits that promise mineral occurrences \cite{dataScienceProjectTypes}. It is not clear if a problem can be solved with the investigation, and problem to solve is not known.
 	
 	\subsection{Systematization of this Project}
-	Usually, the project type is not decided on, but implicitly arises out of environmental parameters. The goal of the analysis is clearly stated in before chapters. Still, the research questions (\ref{research-q}) aim at finding out which insights the analysis can give. Therefore, this project can be classified as a data-first project.
+	Usually, the project type is not decided on, but implicitly arises out of environmental parameters. The goal of the analysis is clearly stated in before chapters. Still, the research questions (\ref{section:research-q}) aim at finding out which insights the analysis can give. Therefore, this project can be classified as a data-first project.
 	
 	\subsection{Resulting Requirements for Selecting a Dataset}
 	In a data-first project, there is no assumption of patterns. This for once means that a large dataset is required to cover enough ground for accurate derivation of insights. Second, a data-first project does not require structured data \cite{srivastavaDataMining}. Instead, unstructured and semi-structured data is also applicable for data-first projects.
