--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -258,6 +258,18 @@
   urldate = {2022-03-15}
 }
 
+@online{hyperparameter,
+  title = {What Is the {{Difference Between}} a {{Parameter}} and a {{Hyperparameter}}?},
+  author = {Brownlee, Jason},
+  date = {2017-07-25T19:00:17+00:00},
+  url = {https://machinelearningmastery.com/difference-between-a-parameter-and-a-hyperparameter/},
+  urldate = {2022-05-26},
+  abstract = {It can be confusing when you get started in applied machine learning. There are so many terms to use and many of the terms may not be used consistently. This is especially true if you have come from another field of study that may use some of the same terms as machine learning, but they […]},
+  langid = {american},
+  organization = {{Machine Learning Mastery}},
+  file = {/Users/I518232/Zotero/storage/KLAUEDL7/difference-between-a-parameter-and-a-hyperparameter.html}
+}
+
 @online{illustratedTransformer,
   title = {The {{Illustrated Transformer}}},
   author = {Alammar, Jay},
@@ -473,6 +485,16 @@
   file = {/Users/I518232/Zotero/storage/LKTG7ZQV/Mikolov et al. - 2013 - Distributed Representations of Words and Phrases a.pdf}
 }
 
+@online{MLGlossary,
+  title = {Machine {{Learning Glossary}}},
+  url = {https://developers.google.com/machine-learning/glossary},
+  urldate = {2022-05-26},
+  abstract = {Compilation of key machine-learning and TensorFlow terms, with beginner-friendly definitions.},
+  langid = {english},
+  organization = {{Google Developers}},
+  file = {/Users/I518232/Zotero/storage/XAV7IEQT/glossary.html}
+}
+
 @online{MLM,
   title = {Masked-{{Language Modelling With BERT}}},
   author = {Briggs, James},
@@ -509,7 +531,7 @@
   file = {/Users/I518232/Zotero/storage/4SC9XTD9/dimensionality-reduction-for-data-visualization-pca-vs-tsne-vs-umap-be4aa7b1cb29.html}
 }
 
-@book{practicalNLP2,
+@book{practicalNLP,
   title = {Practical Natural Language Processing: {{A}} Comprehensive Guide to Building Real-World {{NLP}} Systems},
   author = {Vajjala, S. and Majumder, B. and Gupta, A. and Surana, H.},
   date = {2020},
